# IRCrypto

./: README.md
Client/: CMakeLists.txt  start_routine.c
Client/ClientActions/: client_actions.c  client_actions.h
Crypto/: rsa.c  rsa.h
Server/: CMakeLists.txt  start_routine.c
Server/ClientLists/: client_lists.c  client_lists.h
Server/ServerActions/: server_actions.c  server_actions.h
Utilities/: common_func.c  common_func.h
